syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

//field numbers assure that they won't change in any version for backward/forward compatibility

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string mobile_number = 4;
  string address = 5;
  google.protobuf.Timestamp birthday = 6;
  double lat = 7;
  double lng = 8;
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string mobile_number = 3;
  string address = 4;
  google.protobuf.Timestamp birthday = 5;
  double lat = 6;
  double lng = 7;
}

message CreateUserResponse {
  User user = 1;
}

message ListUsersResponse {
  repeated User users = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

service Users {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {};
  rpc ListUsers (google.protobuf.Empty) returns (ListUsersResponse) {};
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {};
}